fixes navbar on mobile

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -66,6 +66,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .navbar {
+    width: 100vw;
+  }
   .toggleButton {
     display: flex;
   }
